fixed x-axis overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,13 @@ html {
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  
+}
+
+@media screen and (max-width: 767px) {
+  body, html {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
 }
 
